[package]
name = "lab4"
version = "0.1.0"
edition = "2024"
# authors, description, license, etc.
authors = ["Sajjad C Kareem <sajjadck04@gmail.com"]
description = "Verifiable Timestamp Service (VTS) microservice and client library."
license = "MIT"

[dependencies]
axum = "0.7"

tokio = { version = "1.28", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.21"

toml = "0.7"
dirs = "5.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

ecdsa_lib = { package = "digsig", path = "./ecdsa_lib" }

reqwest = { version = "0.11", features = ["json", "blocking"] }

chrono = { version = "0.4", features = ["serde"] }

k256 = { version = "0.13", features = ["ecdsa"] }
